# vk-gfx-cookbook

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
chapters/chapter01/glfw/: CMakeLists.txt
chapters/chapter01/glfw/src/: main.cxx
chapters/chapter01/taskflow/: CMakeLists.txt
chapters/chapter01/taskflow/src/: main.cxx
cmake/: CookbookConfig.cmake  Dependencies.cmake
